# metaprogramming

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: fold_expression.h  variadic_template.h
src/: fold_expression.cpp  variadic_template.cpp
src/constexpr_examples/: conditional_constexpr.cpp  factorial_constexpr.cpp  fibonacci_numbers.cpp  point_constexpr.cpp  sum_to_n_constexpr.cpp  template_recursion.cpp
