cmake_minimum_required(VERSION 3.10)
project(Metaprogramming)
set(CMAKE_CXX_STANDARD 17)
include_directories(include)
add_executable(template_recursion src/constexpr_examples/template_recursion.cpp)
add_executable(fibonacci_numbers src/constexpr_examples/fibonacci_numbers.cpp)
add_executable(variadic_templates src/variadic_template.cpp)
add_executable(fold_expression src/fold_expression.cpp)