cmake_minimum_required(VERSION 3.10)
project(Metaprogramming)
set(CMAKE_CXX_STANDARD 17)
include_directories(include)
add_executable(template_recursion src/constexpr_examples/template_recursion.cpp)
add_executable(fibonacci_numbers src/constexpr_examples/fibonacci_numbers.cpp)
add_executable(factorial_constexpr src/constexpr_examples/factorial_constexpr.cpp)
add_executable(sum_to_n_constexpr src/constexpr_examples/sum_to_n_constexpr.cpp)
add_executable(conditional_constexpr src/constexpr_examples/conditional_constexpr.cpp)
add_executable(point_constexpr src/constexpr_examples/point_constexpr.cpp)
add_executable(variadic_templates src/variadic_template.cpp)
add_executable(fold_expression src/fold_expression.cpp)